# FireITManager

./: .gitignore  CHANGELOG.md  PROJECT_RULES.md  README.md  pyproject.toml  requirements.txt
.continue/prompts/: new-prompt.md
assets/icons/topology/: manifest.json
docs/: 00_Project_Charter.md  01_System_Architecture.md  02_Requirements.md  03_UI_Design.md  04_Database.md  05_Data_Model.md  06_Glossary.md  07_Roadmap.md  08_Developer_Guide.md  09_Testing_Strategy.md  10_Deployment.md  11_AI_Project_Context.md  11_Principles.md  99_AI_CONTEXT.md  README.md
docs/decisions/: ADR-001-Application-Architecture.md  ADR-002-Camp-Canvas.md  ADR-003-Data-Storage.md
docs/diagrams/: Network.drawio
scripts/: build.py  convert_assets.py  generate_icons.py  release.py
specs/: Canvas.spec.md  Incident.spec.md  Inventory.spec.md  Network.spec.md  Reports.spec.md
src/fireitmanager/: __init__.py  app.py  test_continue.py
src/fireitmanager/canvas/: commands.py  constants.py  grid.py  scene.py  view.py
src/fireitmanager/core/: __init__.py  validation.py
src/fireitmanager/models/: _init_.py  asset.py  building.py  cable.py  camp.py  device.py  enums.py  incident.py  location.py  network.py  person.py
src/fireitmanager/persistence/: __init__.py  incident_repository.py
tests/: README.md  test_dialog_directories.py  test_network_relationships.py  test_persistence.py  test_recent_files.py  test_relationship_editors.py  test_reports.py  test_ui.py  test_validation.py
tests/ui/: test_canvas_ui.py
tools/: database_viewer.py  network_debug.py  object_inspector.py
(+19 files in other folders)
