[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fireitmanager"
version = "0.1.0"
description = "Wildland Fire Incident IT Management Platform"
authors = [
    {name = "John Wardle"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "PySide6>=6.9",
    "networkx>=3.5"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
